[gd_scene load_steps=58 format=2]

[ext_resource path="res://Assets/NPC/SkeletonWShield.png" type="Texture" id=1]
[ext_resource path="res://Hitboxes_Hurtbox/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://NPC/Skeleton_Shield.gd" type="Script" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://NPC/PlayerDetection.tscn" type="PackedScene" id=5]
[ext_resource path="res://Effects/EnemyAttackAnimate.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hitboxes_Hurtbox/HitBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Effects/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Effects/WandererNode.tscn" type="PackedScene" id=9]

[sub_resource type="CapsuleShape2D" id=36]
radius = 11.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=30]
radius = 3.0
height = 14.0

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 7.5, 8.5 )

[sub_resource type="CircleShape2D" id=32]
radius = 45.3982

[sub_resource type="CircleShape2D" id=35]
radius = 26.0

[sub_resource type="Animation" id=37]
resource_name = "Attack_Left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Position2D/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_Done"
} ]
}

[sub_resource type="Animation" id=33]
resource_name = "Attack_Right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Position2D/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_Done"
} ]
}

[sub_resource type="Animation" id=39]
resource_name = "Death_Left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=38]
resource_name = "Death_Right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=43]
resource_name = "Idle_Left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24, 25, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=42]
resource_name = "Idle_Right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24, 25, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=34]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Position2D/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=40]
resource_name = "Run_Left"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 32, 33 ]
}

[sub_resource type="Animation" id=41]
resource_name = "Run_Right"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 32, 33 ]
}

[sub_resource type="AnimationNodeAnimation" id=55]
animation = "Attack_Right"

[sub_resource type="AnimationNodeAnimation" id=56]
animation = "Attack_Right"

[sub_resource type="AnimationNodeAnimation" id=57]
animation = "Attack_Right"

[sub_resource type="AnimationNodeAnimation" id=58]
animation = "Attack_Left"

[sub_resource type="AnimationNodeAnimation" id=59]
animation = "Attack_Right"

[sub_resource type="AnimationNodeAnimation" id=60]
animation = "Attack_Right"

[sub_resource type="AnimationNodeAnimation" id=61]
animation = "Attack_Left"

[sub_resource type="AnimationNodeAnimation" id=62]
animation = "Attack_Left"

[sub_resource type="AnimationNodeBlendSpace2D" id=63]
blend_point_0/node = SubResource( 55 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 56 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 57 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 58 )
blend_point_3/pos = Vector2( -1, 0 )
blend_point_4/node = SubResource( 59 )
blend_point_4/pos = Vector2( 0.1, 0.9 )
blend_point_5/node = SubResource( 60 )
blend_point_5/pos = Vector2( 0.1, -0.9 )
blend_point_6/node = SubResource( 61 )
blend_point_6/pos = Vector2( -0.1, 0.9 )
blend_point_7/node = SubResource( 62 )
blend_point_7/pos = Vector2( -0.1, -0.9 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "Idle_Right"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "Idle_Right"

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "Idle_Right"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "Idle_Right"

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "Idle_Right"

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "Idle_Right"

[sub_resource type="AnimationNodeAnimation" id=50]
animation = "Idle_Left"

[sub_resource type="AnimationNodeAnimation" id=51]
animation = "Idle_Left"

[sub_resource type="AnimationNodeBlendSpace2D" id=52]
blend_point_0/node = SubResource( 44 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 45 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 46 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 47 )
blend_point_3/pos = Vector2( -1, 0 )
blend_point_4/node = SubResource( 48 )
blend_point_4/pos = Vector2( 0.1, 0.9 )
blend_point_5/node = SubResource( 49 )
blend_point_5/pos = Vector2( 0.1, -0.9 )
blend_point_6/node = SubResource( 50 )
blend_point_6/pos = Vector2( -0.1, 0.9 )
blend_point_7/node = SubResource( 51 )
blend_point_7/pos = Vector2( -0.1, -0.9 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=64]
animation = "Run_Right"

[sub_resource type="AnimationNodeAnimation" id=65]
animation = "Run_Right"

[sub_resource type="AnimationNodeAnimation" id=66]
animation = "Run_Right"

[sub_resource type="AnimationNodeAnimation" id=67]
animation = "Run_Left"

[sub_resource type="AnimationNodeAnimation" id=68]
animation = "Run_Right"

[sub_resource type="AnimationNodeAnimation" id=69]
animation = "Run_Right"

[sub_resource type="AnimationNodeAnimation" id=70]
animation = "Run_Left"

[sub_resource type="AnimationNodeAnimation" id=71]
animation = "Run_Left"

[sub_resource type="AnimationNodeBlendSpace2D" id=72]
blend_point_0/node = SubResource( 64 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 65 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 66 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 67 )
blend_point_3/pos = Vector2( -1, 0 )
blend_point_4/node = SubResource( 68 )
blend_point_4/pos = Vector2( 0.1, 0.9 )
blend_point_5/node = SubResource( 69 )
blend_point_5/pos = Vector2( 0.1, -0.9 )
blend_point_6/node = SubResource( 70 )
blend_point_6/pos = Vector2( -0.1, -0.9 )
blend_point_7/node = SubResource( 71 )
blend_point_7/pos = Vector2( -0.1, 0.9 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=73]

[sub_resource type="AnimationNodeStateMachineTransition" id=74]

[sub_resource type="AnimationNodeStateMachineTransition" id=75]

[sub_resource type="AnimationNodeStateMachineTransition" id=76]

[sub_resource type="AnimationNodeStateMachine" id=53]
states/Attack/node = SubResource( 63 )
states/Attack/position = Vector2( 336, 201 )
states/Idle/node = SubResource( 52 )
states/Idle/position = Vector2( 336, 104 )
states/Run/node = SubResource( 72 )
states/Run/position = Vector2( 506, 104 )
transitions = [ "Idle", "Run", SubResource( 73 ), "Run", "Idle", SubResource( 74 ), "Idle", "Attack", SubResource( 75 ), "Attack", "Idle", SubResource( 76 ) ]
start_node = "Idle"
graph_offset = Vector2( -203.776, 59.5458 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=54]

[sub_resource type="CapsuleShape2D" id=77]
radius = 8.0

[node name="Skeleton_Shield" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 1 )
hframes = 6
vframes = 6

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -4 )

[node name="HitBox" parent="Position2D" instance=ExtResource( 7 )]
position = Vector2( 0, -4 )
collision_mask = 4
damage = 2

[node name="CollisionShape2D" parent="Position2D/HitBox" index="0"]
position = Vector2( 12, 4 )
shape = SubResource( 36 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2, 2 )
rotation = -1.5708
shape = SubResource( 30 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -2.5, -2.5 )
shape = SubResource( 31 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 6
damage = 2
Speed = 50
Velocity = 75
Friction = 90
Acceleration = 50

[node name="PlayerDetection" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
modulate = Color( 1, 1, 1, 0.392157 )
shape = SubResource( 32 )

[node name="EnemyAttackAnimate" parent="." instance=ExtResource( 6 )]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="EnemyAttackAnimate" index="0"]
shape = SubResource( 35 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack_Left = SubResource( 37 )
anims/Attack_Right = SubResource( 33 )
anims/Death_Left = SubResource( 39 )
anims/Death_Right = SubResource( 38 )
anims/Idle_Left = SubResource( 43 )
anims/Idle_Right = SubResource( 42 )
anims/RESET = SubResource( 34 )
anims/Run_Left = SubResource( 40 )
anims/Run_Right = SubResource( 41 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 53 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 54 )
parameters/Attack/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( -2, -5 )
shape = SubResource( 77 )

[node name="WandererNode" parent="." instance=ExtResource( 9 )]
wander = 64

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="body_entered" from="EnemyAttackAnimate" to="." method="_on_EnemyAttackAnimate_body_entered"]

[editable path="Position2D/HitBox"]
[editable path="Hurtbox"]
[editable path="PlayerDetection"]
[editable path="EnemyAttackAnimate"]
[editable path="SoftCollision"]
